start writing style guide docs

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -29,3 +29,11 @@ html[data-theme="dark"] {
 html[data-theme="dark"] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+[data-theme="light"] .shiki.github-dark {
+  display: none;
+}
+
+[data-theme="dark"] .shiki.github-light {
+  display: none;
+}
